--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/icon"
+        android:label="쏙쏙러닝"
+        android:roundIcon="@mipmap/icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".LoadingActivity"/>
+        <activity android:name=".QRActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +25,7 @@
         <activity android:name=".Number.NumberActivity" />
         <activity android:name=".Objects.ObjectsActivity" />
         <activity android:name=".Plant.PlantActivity" />
-        <activity android:name=".Vehicle.VehicleActivity"></activity>
+        <activity android:name=".Vehicle.VehicleActivity" />
     </application>
 
 </manifest>
